# rscheck

./: .rscheck.toml  AGENTS.md  Cargo.toml  Makefile  README.md  biome.jsonc  package.json  postcss.config.mjs  tsconfig.base.json  tsconfig.build.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-pages.yml
crates/: rscheck-self-audit.toml
crates/rscheck/: Cargo.toml
crates/rscheck-cli/: Cargo.toml
crates/rscheck-cli/src/: cargo_clippy.rs  config.rs  config_file.rs  emit.rs  fix.rs  fix_apply.rs  lib.rs  path_pattern.rs  policy.rs  report.rs  report_html.rs  report_sarif.rs  runner.rs  semantic.rs  text_report.rs  toolchain.rs
crates/rscheck-cli/src/config_file/: tests.rs
crates/rscheck-cli/src/rules/: mod.rs
crates/rscheck-cli/src/rules/absolute_filesystem_paths/: mod.rs
crates/rscheck-cli/src/rules/absolute_module_paths/: tests.rs
crates/rscheck-cli/src/rules/banned_dependencies/: tests.rs
crates/rscheck-cli/src/rules/duplicate_logic/: mod.rs  tests.rs
crates/rscheck-cli/src/rules/file_complexity/: mod.rs  tests.rs
crates/rscheck-cli/src/rules/layer_direction/: mod.rs  tests.rs
crates/rscheck-cli/src/rules/public_api_errors/: tests.rs
crates/rscheck-cli/src/rules/srp_heuristic/: tests.rs
crates/rscheck-cli/src/text_report/: tests.rs
crates/rscheck-cli/src/toolchain/: tests.rs
crates/rscheck-semantic/: Cargo.toml
crates/rscheck-semantic/src/: lib.rs
crates/rscheck/src/: analysis.rs  config.rs  fix.rs  lib.rs  path_pattern.rs  policy.rs  report.rs  rules.rs  runner.rs  semantic.rs  span.rs  test_support.rs
crates/rscheck/src/config/: migrate.rs  tests.rs
crates/rscheck/src/config/migrate/: tests.rs
crates/rscheck/src/path_pattern/: tests.rs
crates/rscheck/src/rules/: absolute_filesystem_paths.rs  absolute_module_paths.rs  banned_dependencies.rs  custom_pattern.rs  duplicate_logic.rs  duplicate_types_alias.rs  external_test_modules.rs  file_complexity.rs  god_object.rs  hot_path_allocations.rs  layer_direction.rs  mod.rs  naming_policy.rs  public_api_errors.rs  srp_heuristic.rs  use_tree_path.rs
crates/rscheck/src/rules/absolute_filesystem_paths/: mod.rs  tests.rs
crates/rscheck/src/rules/absolute_module_paths/: mod.rs  tests.rs
crates/rscheck/src/rules/banned_dependencies/: mod.rs  tests.rs
crates/rscheck/src/rules/custom_pattern/: tests.rs
crates/rscheck/src/rules/duplicate_logic/: mod.rs  tests.rs
crates/rscheck/src/rules/duplicate_types_alias/: mod.rs  tests.rs
crates/rscheck/src/rules/external_test_modules/: tests.rs
crates/rscheck/src/rules/file_complexity/: mod.rs  tests.rs
crates/rscheck/src/rules/god_object/: tests.rs
crates/rscheck/src/rules/hot_path_allocations/: tests.rs
crates/rscheck/src/rules/layer_direction/: mod.rs
crates/rscheck/src/rules/naming_policy/: tests.rs
crates/rscheck/src/rules/public_api_errors/: mod.rs  tests.rs
crates/rscheck/src/rules/srp_heuristic/: mod.rs  tests.rs
site/: index.html  vite.config.ts
site/src/: App.tsx  content.ts  main.tsx  styles.css  theme.ts
