[package]
name = "rscheck-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = true

description = "CLI frontend for the rscheck policy engine."

[dependencies]
annotate-snippets = "0.12.15"
clap = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

cargo_metadata = "0.23.1"
globset = "0.4.18"
ignore = "0.4.25"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = "3.1.0"
syn = { version = "2.0.117", features = ["full", "visit"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "rscheck"
path = "src/main.rs"

[[bin]]
name = "cargo-rscheck"
path = "src/bin/cargo-rscheck.rs"
