[package]
name = "rscheck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

description = "Static analysis tool for Rust workspaces."

[features]
default = []

[dependencies]
thiserror= { workspace = true }
globset = "0.4.18"
ignore = "0.4.25"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
regex = "1.11.2"
serde = { version = "1.0.228", features = ["derive"] }
similar = "3.0.0"
syn = { version = "2.0.117", features = ["full", "visit"] }

[dev-dependencies]
tempfile = "3.27.0"
