[package]
name = "rscheck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = true
readme.workspace = true

description = "Library for checking Rust workspaces against layered rules."

[features]
default = []

[dependencies]
thiserror = { workspace = true }
globset = "0.4.18"
ignore = "0.4.25"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
regex = "1.12.3"
rscheck-semantic = { version = "0.1.0", path = "../rscheck-semantic" }
serde = { version = "1.0.228", features = ["derive"] }
similar = "3.0.0"
syn = { version = "2.0.117", features = ["full", "visit"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
